--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "Controleer of je huidige tab een http of https pagina open heeft"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Show WhoTracks.Me Tracker Wheel next to search results"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "Tracker URLs kun je vinden onder de tracker-omschrijving nadat je op een tracker geklikt hebt."
 	},
