--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "Убедитесь, что на вашей текущей вкладке открыта страница http или https"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Show WhoTracks.Me Tracker Wheel next to search results"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "URL-адреса трекера можно найти под описанием трекера после нажатия на трекер."
 	},
