--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "Asegúrate de que tu actual pestaña tenga abierta una página http o https"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Show WhoTracks.Me Tracker Wheel next to search results"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "Las URL del rastreador se pueden encontrar debajo de la descripción del mismo, después de hacer clic en uno de ellos."
 	},
