--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "Ellenőrizze, hogy a jelenlegi lapfüle http vagy https oldalt nyitott-e meg"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Show WhoTracks.Me Tracker Wheel next to search results"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "A trackerre történő kattintás után a tracker leírása alatt találhatók a tracker URL-jei."
 	},
