--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "現在のタブにhttpまたはhttpsページが開いていることを確認してください"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Show WhoTracks.Me Tracker Wheel next to search results"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "トラッカーをクリックすると、トラッカーのURLがトラッカーの説明の下に表示されます。"
 	},
