--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "Upewnij się, że aktualna zakładka ma otwartą stronę http lub https"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Show WhoTracks.Me Tracker Wheel next to search results"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "Adresy URL tropiciela dostępne są pod opisem tropiciela po kliknięciu na danego tropiciela."
 	},
