--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "确保您当前的标签页中打开了 http 或 https 网页"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Show WhoTracks.Me Tracker Wheel next to search results"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "点击跟踪器后，可以在跟踪器描述下方找到跟踪器网址。"
 	},
