Settings: option to disable Trackers Preview on search results (#742)
* Settings: option to disable WTM Tracker Wheel on search results

fix #741

--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "Assurez-vous que l'onglet ouvert affiche bien une page http ou https"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Afficher l'aperçu der mouchards à côté des résultats"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "Cliquez sur le nom du mouchard pour voir son URL, affichée sous le descriptif"
 	},
