--- a/extension-manifest-v2/_locales/de/messages.json
+++ b/extension-manifest-v2/_locales/de/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "Vergewissern Sie sich, dass in Ihrer aktuellen Registerkarte eine http- oder https-Seite geöffnet ist"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Tracker-Vorschau in Suchergebnissen anzeigen"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "Tracker-URLs finden Sie nach dem Klick auf einen Tracker unter der Beschreibung des Trackers."
 	},
