--- a/extension-manifest-v2/_locales/zh_TW/messages.json
+++ b/extension-manifest-v2/_locales/zh_TW/messages.json
@@ -975,6 +975,9 @@
 	"not_http_page": {
 		"message": "確保您當前的標簽打開了 http 或 https 網頁"
 	},
+	"settings_wtm_serp_report": {
+		"message": "Show WhoTracks.Me Tracker Wheel next to search results"
+	},
 	"settings_show_patterns_tooltip": {
 		"message": "在點擊一個網頁跟蹤器之後，可在網頁跟蹤器描述之下找到網頁跟蹤器的 URLs。"
 	},
